# Eon

./: .env  .gitignore  AGENTS.md  Cargo.toml  PROJECT.md  README.md  TEST_INFRA.md  TEST_READY.md  crates.js  errors.txt  help.html  index.html  kim_sung_ju_report.md  out.json  output.txt  output_ascii.txt  report_output.txt  run_output.txt  rust-toolchain.toml  settings.html  src-files.js  test-wasm.mjs  update_args.patch  vercel.json  verify_report.md
crates/eon-ai/: Cargo.toml
crates/eon-ai/examples/: ai_audit_demo.rs
crates/eon-ai/src/: error.rs  lib.rs  tools.rs
crates/eon-astro/: Cargo.toml
crates/eon-astro/examples/: debug_solar.rs
crates/eon-astro/src/: lib.rs
crates/eon-core/: Cargo.toml
crates/eon-core/src/: birth.rs  error.rs  lib.rs  location.rs  timezone.rs
crates/eon-data/: Cargo.toml
crates/eon-data/examples/: generate_cache.rs
crates/eon-data/src/: cache.rs  error.rs  lib.rs  manseryuk.rs
crates/eon-human-design/: Cargo.toml
crates/eon-human-design/src/: connection.rs  db.rs  dream_rave.rs  lib.rs  penta.rs  phs.rs  quarters.rs  transit.rs
crates/eon-qimen/: Cargo.toml
crates/eon-qimen/src/: lib.rs
crates/eon-qimen/src/analysis/: report.rs
crates/eon-qimen/src/builder/: ju.rs  mod.rs  pan.rs  tests.rs
crates/eon-qimen/src/core/: elements.rs  mod.rs  types.rs
crates/eon-saju/: Cargo.toml
crates/eon-saju/examples/: compare_strength.rs  debug_calendar.rs  debug_emulate.rs  debug_scores.rs  serialize_test.rs  test_saju.rs  verify_advanced.rs  verify_golden_time.rs  verify_kim_sung_ju.rs  verify_optimized_report.rs  verify_report.rs  verify_user.rs
crates/eon-saju/src/: branch.rs  branch_days.rs  calendar.rs  complexity.rs  die.rs  dynamic_luck.rs  element.rs  emulator.rs  entropy.rs  fuzzer.rs  ganzi.rs  lib.rs  linter.rs  load_balancer.rs  major_luck.rs  periodic_luck.rs  pillars.rs  power.rs  relationships.rs  signatures.rs  spirit_markers.rs  stem.rs  strength.rs  structure.rs  ten_gods.rs  topology.rs  transformations.rs  ttd.rs  twelve_stages.rs  vm.rs  void.rs  yongshin.rs
crates/eon-saju/src/analysis/: analytics.rs  dynamic_luck.rs  heluo.rs  major_luck.rs  mod.rs  periodic_luck.rs  power.rs  relationships.rs  remedies.rs  shinsal.rs  spirit_markers.rs  strength.rs  structure.rs  supplementary_pillars.rs  themes.rs  transformations.rs  void.rs  yongshin.rs
crates/eon-saju/src/core/: branch.rs  branch_days.rs  calendar.rs  config.rs  element.rs  ganzi.rs  ganzi_utils.rs  mod.rs  nayin.rs  pillars.rs  stem.rs  ten_gods.rs  twelve_stages.rs
crates/eon-saju/src/engine/: batch.rs  complexity.rs  die.rs  emulator.rs  entropy.rs  fuzzer.rs  interprocess.rs  linter.rs  load_balancer.rs  mod.rs  signatures.rs  topology.rs  trace_tag.rs  ttd.rs  vm.rs
crates/eon-saju/src/report/: mod.rs
crates/eon-saju/tests/: edge_cases.rs
crates/eon-service/: Cargo.toml
crates/eon-service/bindings/: AnalysisRequest.ts  DestinyTierRequest.ts  DomainTier.ts  QimenAnalysisRequest.ts  SajuAnalysisRequest.ts  ServiceError.ts  TierResult.ts
crates/eon-service/examples/: check_saju.rs  check_vedic.rs  generate_tier_json.rs
crates/eon-service/src/: birth.rs  context.rs  dto.rs  error.rs  facade.rs  lib.rs  tests.rs
crates/eon-service/src/fixtures/: mod.rs  v1.rs
crates/eon-service/src/services/: ai_audit.rs  compatibility.rs  human_design.rs  mod.rs  qimen.rs  report.rs  saju.rs  tier.rs  transit.rs  vedic.rs  western.rs  zwds.rs
crates/eon-service/src/tests/: contract.rs  mod.rs  tuning.rs
crates/eon-ui/: Cargo.toml  Dioxus.toml  input.css  tailwind.config.js
crates/eon-ui/public/: vercel.json
crates/eon-ui/src/: main.rs  router.rs
crates/eon-ui/src/components/: mod.rs
crates/eon-ui/src/components/layout/: mod.rs
crates/eon-ui/src/components/shared/: birth_form.rs  birth_form2.rs  export_markdown.rs  mod.rs
crates/eon-ui/src/components/tabs/: ai_tab.rs  composite_bodygraph.rs  hd_bodygraph.rs  (+18 more)
crates/eon-ui/src/i18n/: en.rs  iching_db.rs  ko.rs  mod.rs  ru.rs  zh.rs  zwds_interpret.rs
crates/eon-ui/src/store/: db.rs  mod.rs
crates/eon-ui/src/utils/: geocode.rs  mod.rs
crates/eon-ui/src/worker/: mod.rs
crates/eon-vedic/: Cargo.toml  temp_test.rs
crates/eon-vedic/examples/: compare_dates.rs  verify_ansan.rs  verify_ansan_dasha.rs  verify_vedic.rs
crates/eon-vedic/src/: ayanamsa.rs  chart.rs  config.rs  constants.rs  dasha.rs  lib.rs  names.rs  panchanga.rs  planets.rs  varga.rs  yogas.rs
crates/eon-vedic/src/analysis/: ashtakavarga.rs  aspects.rs  avasthas.rs  bhava.rs  compatibility.rs  dasha.rs  gochara.rs  jaimini.rs  kp.rs  matching.rs  mod.rs  nakshatra.rs  nature.rs  relationships.rs  report.rs  strength.rs  tajika.rs  varga_interpretation.rs  varga_nakshatra_report.rs  vimshopaka.rs  yogas.rs
crates/eon-vedic/src/calc/: ayanamsa.rs  mod.rs  panchanga.rs  varga.rs
crates/eon-vedic/src/core/: chart.rs  config.rs  constants.rs  error.rs  mod.rs  names.rs  planets.rs
crates/eon-vedic/src/prediction/: dasha.rs  kalachakra.rs  mod.rs
crates/eon-vedic/tests/: basic.rs  compatibility_shadbala_kp_dasha.rs  fixtures.rs  location_verify.rs  nodes_verify.rs  panchanga_oracle_verify.rs  position_oracle_verify.rs  regression.rs  shadbala_oracle_verify.rs  user_verification.rs  varga_nakshatra_report.rs  varga_oracle_verify.rs  vimshopaka_oracle_verify.rs  yogas_verify.rs
crates/eon-vedic/tests/common/: mod.rs
crates/eon-vedic/tests/fixtures/: location_oracle.json  mod.rs  panchanga_oracle.json  position_oracle.json  shadbala_oracle.json  varga_oracle.json  vimshopaka_oracle.json
crates/eon-wasm/: Cargo.toml
crates/eon-wasm/pkg/: eon_wasm.d.ts  eon_wasm.js  eon_wasm_bg.js  eon_wasm_bg.wasm  eon_wasm_bg.wasm.d.ts  package.json
crates/eon-wasm/src/: lib.rs  tier.rs
crates/eon-western/: Cargo.toml
crates/eon-western/src/: lib.rs
crates/eon-zwds/: Cargo.toml
crates/eon-zwds/src/: annual.rs  brightness.rs  calendar.rs  chart.rs  decadal.rs  destiny_patterns.rs  error.rs  lib.rs  palace.rs  transformations.rs  types.rs
crates/eon-zwds/src/stars/: assistant.rs  location.rs  major.rs  mod.rs
(+8438 files in other folders)
