[workspace]
resolver = "2"
members = [
    "crates/eon-core",
    "crates/eon-saju",
    "crates/eon-data",
    "crates/eon-astro",
    "crates/eon-ai", "crates/eon-vedic",
    "crates/eon-service",
    "app/src-tauri", "crates/eon-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SJKim <sjkim1127@github.com>"]
license = "MIT"
repository = "https://github.com/sjkim1127/Eon"
description = "Eon: The Destiny Reversing Engine"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
swiss-eph = "0.2"
bincode = "1.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = 'abort'     # Abort on panic instead of unwinding (reduces size)
