[workspace]
resolver = "2"
members = [
    "crates/eon-core",
    "crates/eon-data",
    "crates/eon-astro",
    "crates/eon-saju",
    "crates/eon-vedic",
    "crates/eon-zwds",
    "crates/eon-western",
    "crates/eon-human-design",
    "crates/eon-qimen",
    "crates/eon-ai",
    "crates/eon-service",
    "crates/eon-ui",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["SJKim <sjkim1127@github.com>"]
license = "MIT"
repository = "https://github.com/sjkim1127/Eon"
description = "Eon: The Destiny Reversing Engine"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
swiss-eph = "0.2"
bincode = "1.3.3"

eon-core = { path = "crates/eon-core", version = "=0.1.2" }
eon-data = { path = "crates/eon-data", version = "=0.1.2" }
eon-astro = { path = "crates/eon-astro", version = "=0.1.2" }
eon-saju = { path = "crates/eon-saju", version = "=0.1.2" }
eon-vedic = { path = "crates/eon-vedic", version = "=0.1.2" }
eon-zwds = { path = "crates/eon-zwds", version = "=0.1.2" }
eon-ai = { path = "crates/eon-ai", version = "=0.1.2" }
eon-western = { path = "crates/eon-western", version = "=0.1.2" }
eon-human-design = { path = "crates/eon-human-design", version = "=0.1.2" }
eon-qimen = { path = "crates/eon-qimen", version = "=0.1.2" }
eon-service = { path = "crates/eon-service", version = "=0.1.2" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = 'abort'     # Abort on panic instead of unwinding (reduces size)

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[workspace.lints.rust]
dead_code = "allow"

[workspace.lints.clippy]
too_many_arguments = "allow"
manual_clamp = "allow"
needless_range_loop = "allow"
doc_lazy_continuation = "allow"
unnecessary_sort_by = "allow"
redundant_pattern_matching = "allow"
large_enum_variant = "allow"
field_reassign_with_default = "allow"
