[package]
name = "eon-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
eon-core = { workspace = true }
eon-saju = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
async-trait = "0.1"
log = "0.4"
thiserror.workspace = true

[lints]
workspace = true
