[package]
name = "eon-astro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-precision astronomical engine for Eon"

[dependencies]
eon-core = { path = "../eon-core" }
swiss-eph.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
