[package]
name = "eon-astro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "High-precision astronomical engine for Eon"
repository.workspace = true

[dependencies]
eon-core = { workspace = true }
swiss-eph.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true

[features]
default = ["embedded-ephe"]
embedded-ephe = ["swiss-eph/embedded-ephe"]
swiss-eph-data = ["swiss-eph/swiss-eph-data"]

