[package]
name = "eon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and utilities for Eon destiny platform"
repository.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
