[package]
name = "eon-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Static data for Eon destiny platform (Manseryuk calendar, etc.)"

[dependencies]
eon-core = { path = "../eon-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
once_cell = "1.18"

[dev-dependencies]
eon-astro = { path = "../eon-astro" }
