[package]
name = "eon-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Static data for Eon destiny platform (Manseryuk calendar, etc.)"

[dependencies]
eon-core = { workspace = true }
eon-astro = { workspace = true }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1.3"
thiserror.workspace = true

[dev-dependencies]
