[package]
name = "eon-human-design"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Eon: Human Design Engine — 휴먼디자인 연산 엔진"

[dependencies]
eon-core = { workspace = true }
eon-astro = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
