[package]
name = "eon-qimen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Qimen Dunjia Engine for Eon"

[dependencies]
eon-core = { workspace = true }
eon-saju = { workspace = true }
eon-astro = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
