[package]
name = "eon-saju"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Four Pillars of Destiny (Saju/四柱) calculation library"

[dependencies]
eon-core = { path = "../eon-core" }
eon-data = { path = "../eon-data" }
eon-astro = { path = "../eon-astro" }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
rand = "0.8"
rayon = "1.10"

[dev-dependencies]
