[package]
name = "eon-saju"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Four Pillars of Destiny (Saju/四柱) calculation library"

[features]
default = ["parallel"]
parallel = ["rayon", "rand"]

[dependencies]
eon-core = { workspace = true }
eon-data = { workspace = true }
eon-astro = { workspace = true }
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
rand = { version = "0.8", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
