[package]
name = "eon-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

eon-core = { path = "../eon-core" }
eon-saju = { path = "../eon-saju" }
eon-vedic = { path = "../eon-vedic" }
eon-ai = { path = "../eon-ai" }
eon-astro = { path = "../eon-astro" }
eon-data = { path = "../eon-data" }
ts-rs = { version = "10", features = ["chrono-impl"] }
