[package]
name = "eon-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Service facade and DTO layer for Eon destiny platform"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

eon-core = { workspace = true }
eon-saju = { workspace = true }
eon-vedic = { workspace = true }
eon-zwds = { workspace = true }
eon-western = { workspace = true }
eon-ai = { workspace = true }
eon-astro = { workspace = true }
eon-data = { workspace = true }
ts-rs = { version = "10", features = ["chrono-impl"] }
