[package]
name = "eon-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Service facade and DTO layer for Eon destiny platform"
repository.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

eon-core = { workspace = true }
eon-saju = { workspace = true }
eon-vedic = { workspace = true }
eon-zwds = { workspace = true }
eon-western = { workspace = true }
eon-human-design = { workspace = true }
eon-qimen = { path = "../eon-qimen" }
eon-ai = { workspace = true }
eon-astro = { workspace = true }
eon-data = { workspace = true }
ts-rs = { version = "10.1.0", features = ["chrono-impl"] }

[lints]
workspace = true
