[package]
name = "eon-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
eon-service = { workspace = true }
eon-core = { workspace = true }
eon-vedic = { workspace = true }
eon-saju = { workspace = true }
eon-zwds = { workspace = true }
eon-western = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
wasm-logger = "0.2"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-worker = "0.5.0"
indexed_db_futures = "0.5.0"
uuid = { version = "1.8", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"
