[package]
name = "eon-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[dependencies]
dioxus = { version = "0.6.0", features = ["web", "router"] }
eon-service = { workspace = true }
eon-core = { workspace = true }
eon-vedic = { workspace = true }
eon-saju = { workspace = true }
eon-zwds = { workspace = true }
eon-western = { workspace = true }
eon-human-design = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { workspace = true }
reqwest = { version = "0.13.4", features = ["json"] }
wasm-logger = "0.2"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.4", features = ["futures"] }
gloo-worker = "0.5.0"
indexed_db_futures = "0.5.0"
uuid = { version = "1.8", features = ["v4", "js", "serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
urlencoding = "2.1"
eon-qimen = { version = "0.1.1", path = "../eon-qimen" }
bincode.workspace = true
lazy_static = "1.5.0"
rayon = "1.12.0"
wasm-bindgen-rayon = { version = "1.3.0", features = ["no-bundler"] }
plotters = "0.3.7"
plotters-canvas = "0.3.1"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = ["Window", "Navigator"] }

[lints]
workspace = true
