[package]
name = "eon-vedic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
eon-astro = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
chrono-tz = { workspace = true }

[features]
default = []
embedded-ephe = ["eon-astro/embedded-ephe"]
swiss-eph-data = ["eon-astro/swiss-eph-data"]

