[package]
name = "eon-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
chrono = { workspace = true }
chrono-tz = { workspace = true }
eon-service = { path = "../eon-service" }
eon-vedic = { path = "../eon-vedic" }
eon-astro = { path = "../eon-astro" }
eon-saju = { path = "../eon-saju", default-features = false }
eon-core = { path = "../eon-core" }
eon-ai = { path = "../eon-ai" }
getrandom = { version = "0.2", features = ["js"] } # eon-ai의 WASM getrandom 호환성
serde_json = "1.0"
tsify-next = "0.5"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
