[package]
name = "eon-zwds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Eon: Zi Wei Dou Shu (紫微斗數) Engine — 자미두수 성반 명리 엔진"
repository.workspace = true

[dependencies]
eon-core = { workspace = true }
eon-data  = { workspace = true }
eon-saju  = { workspace = true }

chrono.workspace   = true
serde.workspace    = true
thiserror.workspace = true
anyhow.workspace   = true

[dev-dependencies]
# no extra dev deps needed

[features]
default = []
